--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="module1.html">1. Dilemma</a>
             <a href="module2.html">2. Paradox</a>
-            <a href="module3.html">3. Gridlock</a>
-            <a href="module4.html">4. Solutions</a>
+            <a href="module4.html">3. A Solution</a>
         </div>
     </nav>
 
